[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/__level.gd" type="Script" id=1]
[ext_resource path="res://entities/entity_player/entity_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/entity_cloned_player/entity_cloned_player.tscn" type="PackedScene" id=3]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Terrain" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="ClonedPlayer" parent="." instance=ExtResource( 3 )]

[connection signal="info_updated" from="Player" to="ClonedPlayer" method="update_info"]
[connection signal="position_updated" from="Player" to="ClonedPlayer" method="update_position"]
